@@ -39,14 +39,9 @@ function _manually_load_plugin() {
 	// Load the WooCommerce plugin so we can use its classes in our WooCommerce Payments plugin.
 	require_once WP_PLUGIN_DIR . '/woocommerce/woocommerce.php';
 
-	// Enable and set a default currency to be used for the multi-currency tests because the default
+	// Set a default currency to be used for the multi-currency tests because the default
 	// is not loaded even though it's set during the tests setup.
-	update_option( '_wcpay_feature_customer_multi_currency', '1' );
 	update_option( 'woocommerce_currency', 'USD' );
-
-	// Set the 'wcpaydev_dev_mode' option to enable more currencies for now.
-	// TODO: Remove dev mode option here.
-	update_option( 'wcpaydev_dev_mode', true );
 
 	$_plugin_dir = dirname( __FILE__ ) . '/../../';
 
