@@ -16,6 +16,13 @@ class WC_Payments_Features_Test extends WP_UnitTestCase {
 		'_wcpay_feature_customer_multi_currency' => 'multiCurrency',
 	];
 
+	public function tearDown() {
+		// Remove pre_option filters.
+		foreach ( array_keys( self::FLAG_OPTION_NAME_TO_FRONTEND_KEY_MAPPING ) as $flag ) {
+			remove_all_filters( 'pre_option_' . $flag );
+		}
+	}
+
 	/**
 	 * @dataProvider enabled_flags_provider
 	 */
@@ -36,6 +43,32 @@ class WC_Payments_Features_Test extends WP_UnitTestCase {
 			'no flags'  => [ [] ],
 			'all flags' => [ array_keys( self::FLAG_OPTION_NAME_TO_FRONTEND_KEY_MAPPING ) ],
 		];
+	}
+
+	public function test_customer_multi_currency_is_enabled_by_default() {
+		add_filter(
+			'pre_option__wcpay_feature_customer_multi_currency',
+			function ( $pre_option, $option, $default ) {
+				return $default;
+			},
+			10,
+			3
+		);
+
+		$this->assertTrue( WC_Payments_Features::is_customer_multi_currency_enabled() );
+	}
+
+	public function test_customer_multi_currency_can_be_disabled() {
+		add_filter(
+			'pre_option__wcpay_feature_customer_multi_currency',
+			function ( $pre_option, $option, $default ) {
+				return '0';
+			},
+			10,
+			3
+		);
+
+		$this->assertFalse( WC_Payments_Features::is_customer_multi_currency_enabled() );
 	}
 
 	private function setup_enabled_flags( array $enabled_flags ) {
