@@ -1,6 +1,7 @@
 *** WooCommerce Payments Changelog ***
 
 = 2.8.0 - 2021-xx-xx =
+* Add - Allow merchants to add additional currencies to their store, allowing a store’s customers to shop and browse in the currency of their choice.
 * Add - *Early access*: allow your store to collect payments with Giropay and Sofort. Enable the feature in settings!
 * Add - Use date picker for applicable dispute evidence fields.
 * Fix - Avoid crash when seeing the details of an empty deposit.
